jupyter notebooks with random forest

--- a/temporary-before-switch-to-uv/random-forest-kdd.ipynb
+++ b/temporary-before-switch-to-uv/random-forest-kdd.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "2a0c82d9",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
     "df2 = pd.read_csv('kddcup.data.txt', header=None, on_bad_lines='skip')\n",
     "np.random.seed(42)\n",
     "\n",
-    "# Ustawienie ziarna dla czystego Pythona (rzadziej potrzebne w ML, ale warto)\n",
+    "\n",
     "random.seed(42)\n",
     "\n",
     "df2.head()"
@@ -224,27 +224,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "d9056aa7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['normal.', 'buffer_overflow.', 'loadmodule.', 'perl.', 'neptune.',\n",
-       "       'smurf.', 'guess_passwd.', 'pod.', 'teardrop.', 'portsweep.',\n",
-       "       'ipsweep.', 'land.', 'ftp_write.', 'back.', 'imap.', 'satan.',\n",
-       "       'phf.', 'nmap.', 'multihop.', 'warezmaster.', 'warezclient.',\n",
-       "       'spy.', 'rootkit.'], dtype=object)"
+       "41\n",
+       "smurf.              2807886\n",
+       "neptune.            1072017\n",
+       "normal.              972780\n",
+       "satan.                15892\n",
+       "ipsweep.              12481\n",
+       "portsweep.            10413\n",
+       "nmap.                  2316\n",
+       "back.                  2203\n",
+       "warezclient.           1020\n",
+       "teardrop.               979\n",
+       "pod.                    264\n",
+       "guess_passwd.            53\n",
+       "buffer_overflow.         30\n",
+       "land.                    21\n",
+       "warezmaster.             20\n",
+       "imap.                    12\n",
+       "rootkit.                 10\n",
+       "loadmodule.               9\n",
+       "ftp_write.                8\n",
+       "multihop.                 7\n",
+       "phf.                      4\n",
+       "perl.                     3\n",
+       "spy.                      2\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2[41].unique()"
+    "df2[41].value_counts()"
    ]
   },
   {
@@ -315,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "aa4f4e73",
    "metadata": {},
    "outputs": [
@@ -507,7 +527,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,8 +601,7 @@
     "df2[3] = df2[3].map(flag_map)\n",
     "df2[41] = df2[41].map(attack_map)\n",
     "\n",
-    "# Ważne: Jeśli w danych pojawi się coś nowego (spoza listy), map wstawi tam NaN.\n",
-    "# Warto wypełnić te luki wartością np. -1 (jako \"nieznane\")\n",
+    "\n",
     "df2[1] = df2[1].fillna(-1).astype(int)\n",
     "df2[2] = df2[2].fillna(-1).astype(int)\n",
     "df2[3] = df2[3].fillna(-1).astype(int)\n",
@@ -592,9 +611,36 @@
     "\n",
     "\n",
     "\n",
-    "# Sprawdzenie wyniku\n",
+    "\n",
     "#print(df2['category_num'].value_counts())\n",
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b0178a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41\n",
+       "1    3883370\n",
+       "0     972780\n",
+       "2      41102\n",
+       "3       1126\n",
+       "4         52\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[41].value_counts()"
    ]
   },
   {
@@ -623,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4c0d387b",
    "metadata": {},
    "outputs": [
@@ -691,13 +737,13 @@
     "    4: 'U2R'\n",
     "}\n",
     "\n",
-    "results = {} # Tu będziemy zbierać wyniki\n",
+    "results = {} \n",
     "\n",
-    "# Pętla po każdym typie ataku\n",
+    "\n",
     "for attack_id, attack_name in attack_types.items():\n",
     "    print(f\"--- Trenowanie modelu: Normal vs {attack_name} ---\")\n",
     "    \n",
-    "    # 1. Przygotowanie danych (Tylko Normal + Ten konkretny atak)\n",
+    "    \n",
     "    target_classes = [0, attack_id]\n",
     "    train_mask = y_train.isin(target_classes)\n",
     "    \n",
@@ -707,12 +753,12 @@
     "    rf = RandomForestClassifier(n_jobs=-1, random_state=42, class_weight='balanced')\n",
     "    rf.fit(X_train_special, y_train_special)\n",
     "    \n",
-    "    # 3. Zapisywanie modelu (opcjonalne, ale zalecane)\n",
+    "    \n",
     "    filename = f'model_rf_normal_vs_{attack_name}.joblib'\n",
     "    joblib.dump(rf, filename)\n",
     "    print(f\"Model zapisano jako {filename}\")\n",
     "\n",
-    "    # 4. Testowanie na PEŁNYM zbiorze (wszystkie ataki)\n",
+    "    \n",
     "    y_pred = rf.predict(X_test)\n",
     "    \n",
     "    \n",
@@ -743,10 +789,9 @@
     "        1: f'Alarm: {attack_name}'\n",
     "    }\n",
     "    \n",
-    "    # 3. ZMIENIAMY NAZWY W TABELI\n",
+    "    \n",
     "    cm_readable = cm_final.rename(index=attack_types, columns=model_labels)\n",
     "    \n",
-    "    # Zapisz wynik\n",
     "    results[attack_name] = cm_final\n",
     "    \n",
     "    print(cm_readable)\n",
@@ -755,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "3975dc2e",
    "metadata": {},
    "outputs": [
@@ -772,7 +817,7 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "# Rysowanie 4 heatmap obok siebie\n",
+    "\n",
     "fig, axes = plt.subplots(1, 4, figsize=(24, 6))\n",
     "\n",
     "classes_all_names = ['Normal', 'DoS', 'Probe', 'R2L', 'U2R']\n",
@@ -789,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "0a9c27fd",
    "metadata": {},
    "outputs": [
@@ -809,10 +854,10 @@
     "summary_data = []\n",
     "\n",
     "for model_name, cm in results.items():\n",
-    "    # cm to DataFrame, indeksy to 0,1,2,3,4\n",
-    "    for real_class_id in [1, 2, 3, 4]: # Pomijamy Normal (0)\n",
+    "    \n",
+    "    for real_class_id in [1, 2, 3, 4]: \n",
     "        total = cm.loc[real_class_id].sum()\n",
-    "        detected = cm.loc[real_class_id, 1] # Kolumna 1 to \"Wykryto atak\"\n",
+    "        detected = cm.loc[real_class_id, 1] \n",
     "        accuracy = detected / total\n",
     "        \n",
     "        real_class_name = classes_all_names[real_class_id]\n",
