problexity analysis performed on 10k samples

--- a/temporary-before-switch-to-uv/problexity-kdd.ipynb
+++ b/temporary-before-switch-to-uv/problexity-kdd.ipynb
@@ -1,11 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d3c8c46e",
+   "metadata": {},
+   "source": [
+    "# KDD Cup Dataset Complexity Analysis\n",
+    "\n",
+    "**Performance Optimization:**\n",
+    "- Original dataset: ~4.9M rows → **900+ minutes** (infeasible)\n",
+    "- Using stratified sampling: 50k rows → **~5-10 minutes** ✓\n",
+    "- Maintains class distribution for statistically valid complexity metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "de17a762",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset loaded: 4,898,431 rows\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -204,12 +224,12 @@
     "import numpy as np \n",
     "import random\n",
     "\n",
-    "df2 = pd.read_csv('kddcup.data.txt', header=None, on_bad_lines='skip')\n",
+    "# Read directly from .gz file - pandas handles decompression automatically\n",
+    "df2 = pd.read_csv('../detection-of-network-intrusions/data/kddcup.data.gz', header=None, on_bad_lines='skip')\n",
     "np.random.seed(42)\n",
-    "\n",
-    "\n",
     "random.seed(42)\n",
     "\n",
+    "print(f\"Dataset loaded: {len(df2):,} rows\")\n",
     "df2.head()"
    ]
   },
@@ -297,54 +317,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6463a082",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full dataset: 4,898,431 samples\n",
+      "Class distribution:\n",
+      "41\n",
+      "0     972781\n",
+      "1    3883370\n",
+      "2      41102\n",
+      "3       1126\n",
+      "4         52\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Sampled dataset: 50,000 samples\n",
+      "Sampled class distribution:\n",
+      "41\n",
+      "0     9929\n",
+      "1    39639\n",
+      "2      420\n",
+      "3       11\n",
+      "4        1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X = df2.drop(columns=[41])\n",
-    "y = df2[41]"
+    "y = df2[41]\n",
+    "\n",
+    "print(f\"Full dataset: {len(X):,} samples\")\n",
+    "print(f\"Class distribution:\\n{y.value_counts().sort_index()}\")\n",
+    "\n",
+    "# Use stratified sampling to get representative subset\n",
+    "# 50k samples will complete in ~5-10 minutes instead of 900+ minutes\n",
+    "SAMPLE_SIZE = 50000\n",
+    "\n",
+    "X_sample, _, y_sample, _ = train_test_split(\n",
+    "    X, y, \n",
+    "    train_size=SAMPLE_SIZE, \n",
+    "    stratify=y, \n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nSampled dataset: {len(X_sample):,} samples\")\n",
+    "print(f\"Sampled class distribution:\\n{y_sample.value_counts().sort_index()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "75341e31",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/janek/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/problexity/classification/feature_based.py:116: SyntaxWarning: \"\\p\" is an invalid escape sequence. Such sequences will not work in the future. Did you mean \"\\\\p\"? A raw string is also an option.\n",
-      "  F2=\\prod^{m}_{i}{\\\\frac{overlap(f_i)}{range(f_i)}}\n",
-      "/home/janek/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/problexity/classification/feature_based.py:151: SyntaxWarning: \"\\m\" is an invalid escape sequence. Such sequences will not work in the future. Did you mean \"\\\\m\"? A raw string is also an option.\n",
-      "  F3=\\min^{m}_{i=1}{\\\\frac{n_o(f_i)}{n}}\n"
+      "Fitting complexity calculator on sampled data...\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adamgruda/miniconda3/envs/dashboard/lib/python3.10/site-packages/problexity/classification/feature_based.py:45: RuntimeWarning: invalid value encountered in divide\n",
+      "  r_all = l/m\n",
+      "/Users/adamgruda/miniconda3/envs/dashboard/lib/python3.10/site-packages/problexity/classification/feature_based.py:141: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.nanprod(f_overlap/f_range)\n"
+     ]
+    },
+    {
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mproblexity\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpx\u001b[39;00m\n\u001b[32m      3\u001b[39m cc = px.ComplexityCalculator()\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mcc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/problexity/ComplexityCalculator.py:172\u001b[39m, in \u001b[36mComplexityCalculator.fit\u001b[39m\u001b[34m(self, X, y)\u001b[39m\n\u001b[32m    170\u001b[39m                 mask = (y==i) + (y==j)\n\u001b[32m    171\u001b[39m                 _y = (y[mask] == j).astype(\u001b[38;5;28mint\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m                 complexities.append([\u001b[43mm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_y\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.metrics])\n\u001b[32m    174\u001b[39m \u001b[38;5;66;03m# Calculate mean complexity                  \u001b[39;00m\n\u001b[32m    175\u001b[39m \u001b[38;5;28mself\u001b[39m.complexity = np.mean(np.array(complexities), axis=\u001b[32m0\u001b[39m).tolist()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/problexity/classification/feature_based.py:41\u001b[39m, in \u001b[36mf1\u001b[39m\u001b[34m(X, y)\u001b[39m\n\u001b[32m     38\u001b[39m X_1_mean = np.mean(X_1, axis = \u001b[32m0\u001b[39m)\n\u001b[32m     40\u001b[39m X_0_std = np.std(X_0, axis = \u001b[32m0\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m X_1_std = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     43\u001b[39m l = (X_0_prop*X_1_prop*np.power((X_0_mean - X_1_mean),\u001b[32m2\u001b[39m)) + (X_1_prop*X_0_prop*np.power((X_1_mean - X_0_mean),\u001b[32m2\u001b[39m))\n\u001b[32m     44\u001b[39m m = (X_0_prop*(np.power(X_0_std,\u001b[32m2\u001b[39m))) + (X_1_prop*(np.power(X_1_std,\u001b[32m2\u001b[39m)))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/numpy/_core/fromnumeric.py:4064\u001b[39m, in \u001b[36mstd\u001b[39m\u001b[34m(a, axis, dtype, out, ddof, keepdims, where, mean, correction)\u001b[39m\n\u001b[32m   4061\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   4062\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m std(axis=axis, dtype=dtype, out=out, ddof=ddof, **kwargs)\n\u001b[32m-> \u001b[39m\u001b[32m4064\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_methods\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_std\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mddof\u001b[49m\u001b[43m=\u001b[49m\u001b[43mddof\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   4065\u001b[39m \u001b[43m                     \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/numpy/_core/_methods.py:222\u001b[39m, in \u001b[36m_std\u001b[39m\u001b[34m(a, axis, dtype, out, ddof, keepdims, where, mean)\u001b[39m\n\u001b[32m    220\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_std\u001b[39m(a, axis=\u001b[38;5;28;01mNone\u001b[39;00m, dtype=\u001b[38;5;28;01mNone\u001b[39;00m, out=\u001b[38;5;28;01mNone\u001b[39;00m, ddof=\u001b[32m0\u001b[39m, keepdims=\u001b[38;5;28;01mFalse\u001b[39;00m, *,\n\u001b[32m    221\u001b[39m          where=\u001b[38;5;28;01mTrue\u001b[39;00m, mean=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m--> \u001b[39m\u001b[32m222\u001b[39m     ret = \u001b[43m_var\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mddof\u001b[49m\u001b[43m=\u001b[49m\u001b[43mddof\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    223\u001b[39m \u001b[43m               \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmean\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmean\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    225\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(ret, mu.ndarray):\n\u001b[32m    226\u001b[39m         ret = um.sqrt(ret, out=ret)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/studia/networks/detection-of-network-intrusions/temporary-before-switch-to-uv/.venv/lib64/python3.14/site-packages/numpy/_core/_methods.py:190\u001b[39m, in \u001b[36m_var\u001b[39m\u001b[34m(a, axis, dtype, out, ddof, keepdims, where, mean)\u001b[39m\n\u001b[32m    185\u001b[39m         arrmean = arrmean / rcount\n\u001b[32m    187\u001b[39m \u001b[38;5;66;03m# Compute sum of squared deviations from mean\u001b[39;00m\n\u001b[32m    188\u001b[39m \u001b[38;5;66;03m# Note that x may not be inexact and that we need it to be an array,\u001b[39;00m\n\u001b[32m    189\u001b[39m \u001b[38;5;66;03m# not a scalar.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m190\u001b[39m x = \u001b[43masanyarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[43marrmean\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    192\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(arr.dtype.type, (nt.floating, nt.integer)):\n\u001b[32m    193\u001b[39m     x = um.multiply(x, x, out=x)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
     "import problexity as px\n",
+    "import time\n",
     "\n",
     "cc = px.ComplexityCalculator()\n",
     "\n",
-    "cc.fit(X,y)"
+    "print(\"Fitting complexity calculator on sampled data...\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "cc.fit(X_sample, y_sample)\n",
+    "\n",
+    "elapsed = time.time() - start_time\n",
+    "print(f\"✓ Completed in {elapsed:.1f} seconds ({elapsed/60:.1f} minutes)\")"
    ]
   },
   {
@@ -407,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "dashboard",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
